@@ -186,25 +186,6 @@ all log to C<$workdir/bbtester_child.log>.
 
 Steve Bertrand, C<< <steveb at cpan.org> >>
 
-=head1 CONTRIBUTING
-
-Any and all feedback and help is appreciated. A Pull Request is the preferred
-method of receiving changes (L<https://github.com/stevieb9/p5-test-brewbuild>),
-but regular patches through the bug tracker, or even just email discussions are
-welcomed.
-
-=head1 BUGS
-
-L<https://github.com/stevieb9/p5-test-brewbuild/issues>
-
-=head1 SUPPORT
-
-You can find documentation for this script and its associated module with the
-perldoc command.
-
-    perldoc bbtester
-    perldoc Test::BrewBuild::Tester
-
 =head1 SEE ALSO
 
     perldoc brewbuild
@@ -217,7 +198,7 @@ perldoc command.
 
 =head1 LICENSE AND COPYRIGHT
 
-Copyright 2016 Steve Bertrand.
+Copyright 2017 Steve Bertrand.
 
 This program is free software; you can redistribute it and/or modify it
 under the terms of either: the GNU General Public License as published
